[gd_scene load_steps=17 format=3 uid="uid://bd82dxa2xlbr0"]

[ext_resource type="Script" uid="uid://diqbayfayrjc1" path="res://Platooning/pawn.gd" id="1_qyl3e"]
[ext_resource type="Texture2D" uid="uid://dh10j38lptsbq" path="res://assets/kenney_top-down-shooter/PNG/soldier.png" id="2_jd6ef"]
[ext_resource type="Script" uid="uid://cau6j0o0julfq" path="res://addons/godot_state_charts/state_chart.gd" id="3_o7vpy"]
[ext_resource type="Script" uid="uid://bou0yn8lpwcuh" path="res://addons/godot_state_charts/compound_state.gd" id="4_hry0o"]
[ext_resource type="Script" uid="uid://dyiggrr357tov" path="res://addons/godot_state_charts/atomic_state.gd" id="5_dm74v"]
[ext_resource type="Script" uid="uid://m8bym6l05tkl" path="res://addons/godot_state_charts/transition.gd" id="6_5v3fq"]
[ext_resource type="PackedScene" uid="uid://c18kqntm5kf53" path="res://Platooning/Communication/Communicator.tscn" id="7_vpmsw"]
[ext_resource type="PackedScene" uid="uid://b0i3goxsi5vte" path="res://TankWars/Memorizers/enemy_tracker.tscn" id="8_jlshk"]
[ext_resource type="PackedScene" uid="uid://bsfcprv20pdnf" path="res://TankWars/TacticalDeciders/explore_planner.tscn" id="9_jdknj"]
[ext_resource type="PackedScene" uid="uid://0bkshlrx7wpw" path="res://Platooning/TacticalDeciders/group_planner.tscn" id="10_ifef1"]
[ext_resource type="PackedScene" uid="uid://cctrepqj08p47" path="res://Platooning/TacticalDeciders/infantry_attack_planner.tscn" id="11_sovdj"]
[ext_resource type="PackedScene" uid="uid://cxa4n46xuic4k" path="res://TankWars/Memorizers/obstacle_map.tscn" id="12_th5gn"]
[ext_resource type="PackedScene" uid="uid://cxhtqmgsfi31e" path="res://TankWars/TacticalDeciders/pathfinder.tscn" id="13_7m2tt"]
[ext_resource type="PackedScene" uid="uid://dwt5d54cictjf" path="res://Platooning/Sensors/vision.tscn" id="14_l426y"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="15_kgpkx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_13v80"]
radius = 23.0

[node name="Pawn" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_qyl3e")
share_map = true

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_jd6ef")

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_13v80")

[node name="Behavior" type="Node" parent="."]
script = ExtResource("3_o7vpy")
metadata/_custom_type_script = "uid://cau6j0o0julfq"

[node name="InfantryMovement" type="Node" parent="Behavior"]
script = ExtResource("4_hry0o")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="Behavior/InfantryMovement"]
script = ExtResource("5_dm74v")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="new_waypoint" type="Node" parent="Behavior/InfantryMovement/Idle"]
script = ExtResource("6_5v3fq")
to = NodePath("../../RotateBody")
event = &"new_waypoint"
delay_in_seconds = "0.0"

[node name="RotateBody" type="Node" parent="Behavior/InfantryMovement"]
script = ExtResource("5_dm74v")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="move" type="Node" parent="Behavior/InfantryMovement/RotateBody"]
script = ExtResource("6_5v3fq")
to = NodePath("../../Moving")
event = &"move"
delay_in_seconds = "0.0"

[node name="stop" type="Node" parent="Behavior/InfantryMovement/RotateBody"]
script = ExtResource("6_5v3fq")
to = NodePath("../../Idle")
event = &"stop"
delay_in_seconds = "0.0"

[node name="Moving" type="Node" parent="Behavior/InfantryMovement"]
script = ExtResource("5_dm74v")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="waypoint_reached" type="Node" parent="Behavior/InfantryMovement/Moving"]
script = ExtResource("6_5v3fq")
to = NodePath("../../Idle")
event = &"waypoint_reached"
delay_in_seconds = "0.0"

[node name="stop" type="Node" parent="Behavior/InfantryMovement/Moving"]
script = ExtResource("6_5v3fq")
to = NodePath("../../Idle")
event = &"stop"
delay_in_seconds = "0.0"

[node name="Communicator" parent="." instance=ExtResource("7_vpmsw")]

[node name="EnemyTracker" parent="." instance=ExtResource("8_jlshk")]

[node name="ExplorePlanner" parent="." instance=ExtResource("9_jdknj")]

[node name="GroupPlanner" parent="." instance=ExtResource("10_ifef1")]

[node name="InfantryAttackPlanner" parent="." instance=ExtResource("11_sovdj")]

[node name="ObstacleMap" parent="." instance=ExtResource("12_th5gn")]

[node name="Pathfinder" parent="." instance=ExtResource("13_7m2tt")]

[node name="Vision" parent="." instance=ExtResource("14_l426y")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="StateChartDebugger" parent="CanvasLayer" instance=ExtResource("15_kgpkx")]
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -542.0
offset_bottom = 628.0
grow_horizontal = 0
grow_vertical = 1
size_flags_horizontal = 8
size_flags_vertical = 0
initial_node_to_watch = NodePath("../../Behavior")

[node name="ShareMapTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="state_entered" from="Behavior/InfantryMovement" to="." method="_on_infantry_movement_state_entered"]
[connection signal="state_processing" from="Behavior/InfantryMovement/RotateBody" to="." method="_on_rotate_body_state_processing"]
[connection signal="state_physics_processing" from="Behavior/InfantryMovement/Moving" to="." method="_on_moving_state_physics_processing"]
[connection signal="taken" from="Behavior/InfantryMovement/Moving/waypoint_reached" to="." method="_on_waypoint_reached_taken"]
[connection signal="timeout" from="ShareMapTimer" to="." method="_on_share_map_timeout"]
